--- a/JavaScript 深度剖析/1.1函数式编程范式.md
+++ b/JavaScript 深度剖析/1.1函数式编程范式.md
@@ -259,7 +259,7 @@ const r = _.each(array, (item, index) => {
 console.log(r)
 ```
 
-### 纯函数好处
+**纯函数好处**
 
 - 可缓存
 
@@ -301,7 +301,7 @@ console.log(getAreaWithMemory(4))
 console.log(getAreaWithMemory(4))
 ```
 
-### 纯函数副作用
+**纯函数副作用**
 
 纯函数：相同的输入永远会得到相同的输出，而且 **没有任何可观察的 副作用**
 
@@ -386,3 +386,169 @@ console.log(findSpace(['John Connor', 'John_Donne']))
 
 - `getSum` 需要几个参数，在调用 `curried` 时就传递几个参数，立即调用并返回执行结果
 - 调用 `curried` 时只传递 `getSum` 需要的部分参数，此时 `curried` 函数会返回一个新的函数并等待 `getSum` 所需要的其他参数
+
+```js
+function getSum(a, b, c) {
+  return a + b + c
+}
+
+function curry(func) {
+  return function curriedFn(...args) {
+    // 判断实参和形参的个数
+    if (args.length < func.length) {
+      return function () {
+        return curried(...args.concat(Array.from(arguments)))
+      }
+    }
+    return func(...args)
+  }
+}
+
+const curried = curry(getSum)
+console.log(curried(1, 2, 3))
+console.log(curried(1, 2)(3))
+```
+
+**总结：**
+
+- 柯里化可以让我们给一个函数传递较少的参数得到一个已经记住了某些固定参数的新函数
+
+  柯里化可以帮我们生成一个新的函数，生成的函数已经记住了某些固定的参数
+
+- 这是一种对函数参数的 "缓存"
+
+- 让函数变的更灵活，让函数的粒度更小
+
+- 可以把多元函数转换成一元函数，可以组合使用函数产生强大的功能
+
+## 函数组合
+
+纯函数和柯里化很容易写出洋葱代码：`h(g(f(x)))`
+
+- 获取数组的最后一个元素再转换成大写字母：`_.toUpper(_.first(_.reverse(array)))`
+- 函数组合可以让我们把细粒度的函数重新组合生成一个新的函数
+
+![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/洋葱代码.png)
+
+**管道**
+
+下面这张图表示程序中使用函数处理数据的过程，把参数 a 经过管道 fn 传入，经过处理返回 b
+
+![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/管道1.png)
+
+如果管道 fn 特别长（如果哪个地方漏水，可能很难去找到具体位置），可以把管道 fn 拆分成多个。下面这张图表示把 fn 这个管道拆分成 3 个管道 f1、f2、f3，最终把 参数 a 处理后返回 b
+
+![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/管道2.png)
+
+```js
+// 伪代码来实现上面逻辑
+fn = compose(f1, f2, f3)
+b = fn(a)
+```
+
+**函数组合：** 如果一个函数要经过多个函数才能得到最终值，这个时候可以把中间过程的函数合并成一个函数
+
+- 函数就像是数据的管道，函数组合就是把这些管道连接起来，让数据穿过多个管道形成最终结果
+- **函数组合默认是从右到左执行**
+
+```js
+// 函数组合
+function compose(f, g) {
+  return function (value) {
+    return f(g(value))
+  }
+}
+function reverse(array) {
+  return array.reverse()
+}
+function first(array) {
+  return array[0]
+}
+// 从右到左运行
+const last = compose(first, reverse)
+console.log(last([1, 2, 3, 4]))
+```
+
+**lodash 中的组合函数：**
+
+- lodash 中组合函数 `flow()` 或 `flowRight()`，他们都可以组合多个函数
+- `flow()` 是从左到右
+- `flowRight()` 是从右到左运行，使用的更多一些
+
+```js
+const _ = require('lodash')
+
+const reverse = arr => arr.reverse()
+const first = arr => arr[0]
+const toUpper = s => s.toUpperCase()
+const f = _.flowRight(toUpper, first, reverse)
+console.log(f(['one', 'two', 'three']))
+```
+
+模拟实现 lodash 的 `flowRight` 方法
+
+```js
+function compose(...args) {
+  return function (value) {
+    return args.reverse().reduce(function (acc, fn) {
+      return fn(acc)
+    }, value)
+  }
+}
+
+// ES6写法
+const compose =
+  (...args) =>
+  value =>
+    args.reverse().reduce((acc, fn) => fn(acc), value)
+```
+
+函数的组合要满足 **结合律**（associativity）
+
+- `compose(f, g, h)` 我们既可以把 g 和 h 组合 `compose(f, compose(g, h))`，还可以把 f 和 g 组合 `compose(compose(f, g), h)`，结果都是一样的
+
+```js
+// 结合律
+const _ = require('lodash')
+// const f = _.flowRight(_.toUpper, _.first, _.reverse)
+// const f = _.flowRight(_.flowRight(_.toUpper, _.first), _.reverse)
+const f = _.flowRight(_.toUpper, _.flowRight(_.first, _.reverse))
+console.log(f(['one', 'two', 'three']))
+```
+
+**如何调试组合函数：**
+
+```js
+const _ = require('lodash')
+
+const trace = _.curry((tag, v) => {
+  console.log(tag, v)
+  return v
+})
+
+const split = _.curry((sep, str) => _.split(str, sep))
+const join = _.curry((sep, array) => _.join(array, sep))
+const map = _.curry((fn, array) => _.map(array, fn))
+
+const f = _.flowRight(join('-'), trace('map 之后'), map(_.toLower), trace('split 之后'), split(' '))
+console.log(f('NEVER SAY DIE'))
+```
+
+[lodash/fp](https://github.com/lodash/lodash/wiki/FP-Guide)
+
+- lodash 默认调用方式是 `_.map(['a', 'b'], _.toUpper)`（数据优先，函数之后）
+- lodash 的 fp 模块提供了实用的对 **函数式编程友好** 的方法（函数优先，数据之后）
+- 提供了不可变 **auto-curried interatee-first data-last** 的方法
+
+```js
+const fp = require('lodash/fp')
+
+// 函数优先，数据之后
+fp.map(fp.toUpper, ['a', 'b', 'c'])
+// 返回的是柯里化后的函数，不需要用 curry 进行包装
+fp.split(' ')('Hello World')
+
+const f = fp.flowRight(fp.join('-'), fp.map(fp.toLower), fp.split(' '))
+console.log(f('NEVER SAY DIE'))
+```
+
