增加函子内容

--- a/JavaScript 深度剖析/1.1函数式编程范式.md
+++ b/JavaScript 深度剖析/1.1函数式编程范式.md
@@ -1,3 +1,7 @@
+## 目录
+
+[toc]
+
 ## 函数式编程
 
 > [函数式编程指北](https://llh911001.gitbooks.io/mostly-adequate-guide-chinese/content/ch1.html)
@@ -552,3 +556,72 @@ const f = fp.flowRight(fp.join('-'), fp.map(fp.toLower), fp.split(' '))
 console.log(f('NEVER SAY DIE'))
 ```
 
+**lodash map 的问题**
+
+```js
+const _ = require('lodash')
+
+// lodash.map会传递三个参数value,index|key,collection
+console.log(_.map(['23', '8', '10'], parseInt))
+// parseInt('23', 0, array)
+// parseInt('8', 1, array)
+// parseInt('10', 2, array)
+
+const fp = require('lodash/fp')
+// fp.map只传递一个参数接收一个函数
+console.log(fp.map(parseInt, ['23', '8', '10']))
+```
+
+## Point Free
+
+> pointfree 指的是永远不说出你的数据，函数无须提及将要操作的数据是什么样的
+
+**Point Free：** 我们可以把数据处理的过程定义成与数据无关的合成运算，不需要用代表数据的那个参数，只要把简单的运算合并到一起，在使用这种模式之前我们需要定义一些辅助的基本运算函数
+
+- 不需要指明处理的数据
+- **只需要合成运算过程**
+- 需要定义一些辅助的基本运算函数
+
+```js
+// 非Point Free模式
+function f(word) {
+  return word.toLowerCase().replace(/\s+/g, '_')
+}
+
+// Point Free
+const fp = require('lodash/fp')
+const f = fp.flowRight(fp.replace(/\s+/g, '_'), fp.toLower)
+
+console.log(f('Hello World'))
+```
+
+使用 Point Free 模式，把单词中的首字母提取并转换成大写
+
+```js
+const fp = require('lodash/fp')
+// 这里fp.map调用了两次，可以对其进行优化
+/* const firstLetterToUpper = fp.flowRight(
+  fp.join('. '),
+  fp.map(fp.first),
+  fp.map(fp.toUpper),
+  fp.split(' ')
+) */
+const firstLetterToUpper = fp.flowRight(
+  fp.join('. '),
+  fp.map(fp.flowRight(fp.first, fp.toUpper)),
+  fp.split(' ')
+)
+console.log(firstLetterToUpper('world wild web'))
+```
+
+## Functor（函子）
+
+函数式编程其实就是把运算抽象成函数，将来函数可以做到最大化重用，另外我们还知道函数式编程是建立在数学思想上的，比如：纯函数就是数学中的函数，而函子是建立数学范畴论的基础上（一个范畴到另一个范畴的投影）
+
+**什么是 Functor**
+
+- 容器：包含值和值得变形关系（这个变形关系就是函数）
+
+- 函子：是一个特殊的容器，通过一个普通函数的对象来实现，该对象具有 map 方法，map 方法可以运行一个函数对值进行处理（变形关系）
+
+  可以理解为盒子里面有一个值，并且对外公布一个对值处理的方法
