完成函数式编程学习

--- a/JavaScript 深度剖析/1.1函数式编程范式.md
+++ b/JavaScript 深度剖析/1.1函数式编程范式.md
@@ -2,7 +2,9 @@
 
 [toc]
 
-## 函数式编程
+![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/函数式编程.png)
+
+## 认识函数式编程
 
 > [函数式编程指北](https://llh911001.gitbooks.io/mostly-adequate-guide-chinese/content/ch1.html)
 > [阮一峰 函数式编程入门](http://www.ruanyifeng.com/blog/2017/02/fp-tutorial.html)
@@ -220,7 +222,9 @@ console.log(power2(4))
 console.log(power3(4))
 ```
 
-## 纯函数
+## 函数式编程基础
+
+### 纯函数
 
 **纯函数：相同的输入永远会得到相同的输出**，而且没有任何可观察的副作用
 
@@ -307,7 +311,7 @@ console.log(getAreaWithMemory(4))
 
 **纯函数副作用**
 
-纯函数：相同的输入永远会得到相同的输出，而且 **没有任何可观察的 副作用**
+- 纯函数：相同的输入永远会得到相同的输出，而且 **没有任何可观察的 副作用**
 
 ```js
 // 不纯函数
@@ -331,7 +335,7 @@ function checkAge(age) {
 
 所有的外部交互都有可能产生副作用，副作用也使得方法通用性下降不适合扩展和可重用性，同时副作用会给程序中带来安全隐患给程序带来不确定性，但是副作用不可能完全禁止，尽可能控制他们在可控范围内发生
 
-## 柯里化（Haskell Brooks Curry）
+### 柯里化（Haskell Brooks Curry）
 
 - 当一个函数有多个参数的时候会先传递一部分参数调用它（这部分参数以后永远不变）
 - 然后返回一个新的函数接收剩余的参数，返回结果
@@ -413,7 +417,7 @@ console.log(curried(1, 2, 3))
 console.log(curried(1, 2)(3))
 ```
 
-**总结：**
+**柯里化总结**
 
 - 柯里化可以让我们给一个函数传递较少的参数得到一个已经记住了某些固定参数的新函数
 
@@ -425,7 +429,7 @@ console.log(curried(1, 2)(3))
 
 - 可以把多元函数转换成一元函数，可以组合使用函数产生强大的功能
 
-## 函数组合
+### 函数组合
 
 纯函数和柯里化很容易写出洋葱代码：`h(g(f(x)))`
 
@@ -473,7 +477,7 @@ const last = compose(first, reverse)
 console.log(last([1, 2, 3, 4]))
 ```
 
-**lodash 中的组合函数：**
+**lodash 中的组合函数**
 
 - lodash 中组合函数 `flow()` 或 `flowRight()`，他们都可以组合多个函数
 - `flow()` 是从左到右
@@ -520,7 +524,7 @@ const f = _.flowRight(_.toUpper, _.flowRight(_.first, _.reverse))
 console.log(f(['one', 'two', 'three']))
 ```
 
-**如何调试组合函数：**
+**如何调试组合函数**
 
 ```js
 const _ = require('lodash')
@@ -572,7 +576,7 @@ const fp = require('lodash/fp')
 console.log(fp.map(parseInt, ['23', '8', '10']))
 ```
 
-## Point Free
+### Point Free
 
 > pointfree 指的是永远不说出你的数据，函数无须提及将要操作的数据是什么样的
 
@@ -616,6 +620,28 @@ console.log(firstLetterToUpper('world wild web'))
 
 ## Functor（函子）
 
+函子其实就可以理解成一个盒子
+
+- 盒子里面封装了一个值（value），这个值不对外提供，盒子对外提供 map 方法
+
+  如果想处理盒子里面的值，就需要给 map 方法里传递一个纯函数来处理这个值
+
+  map 返回的是包含新值的盒子，这样就形成了链式调用
+
+- 如果传递了 null 值或 undefined，就会产生副作用导致函数不纯，这时就可以使用 MayBe 函子
+
+- 如果 map 方法调用了很多次，返回的是 null，使用 MayBe 函子就比较难进行溯源了，这时就可以使用 Either 函子（类似 `if...else...`）
+
+- 对于不纯的操作也可以使用 IO 函子，把不纯的操作延迟执行
+
+- 函子可以帮我们控制副作用进行异常处理还可以处理异步任务
+
+- Pointed 函子是实现了 of 静态方法的函子
+
+- Monad 函子就是静态 IO 方法 + join 方法的函子（当一个函子返回一个函子时就可以使用 Monad）
+
+### 函子
+
 函数式编程其实就是把运算抽象成函数，将来函数可以做到最大化重用，另外我们还知道函数式编程是建立在数学思想上的，比如：纯函数就是数学中的函数，而函子是建立数学范畴论的基础上（一个范畴到另一个范畴的投影）
 
 **什么是 Functor**
@@ -625,3 +651,315 @@ console.log(firstLetterToUpper('world wild web'))
 - 函子：是一个特殊的容器，通过一个普通函数的对象来实现，该对象具有 map 方法，map 方法可以运行一个函数对值进行处理（变形关系）
 
   可以理解为盒子里面有一个值，并且对外公布一个对值处理的方法
+
+```js
+// Functor函子
+class Container {
+  // 静态方法可以直接通过类名调用
+  static of(value) {
+    return new Container(value)
+  }
+  constructor(value) {
+    // 盒子里面有一个值
+    this._value = value
+  }
+  // 对外公布一个 map 方法，接收一个处理值的纯函数
+  map(fn) {
+    // 返回一个新盒子（函子）
+    return Container.of(fn(this._value))
+  }
+}
+
+// 调用 map 方法时需要传递一个函数来处理 Container 里的值
+// let r = new Container(5).map(x => x + 1).map(x => x * x)
+// 每次创建一个函子都需要调用 new 来创建，可以对 new 进行封装
+// console.log(r)
+
+let r = Container.of(5)
+  .map(x => x + 1)
+  .map(x => x * x)
+console.log(r)
+```
+
+**函子总结**
+
+- 函数式编程运算不直接操作值，而是由函子完成
+- 函子就是一个实现了 map 契约的对象
+- 我们可以把函子想象成一个盒子，这个盒子里封装了一个值
+- 想要处理盒子中的值，需要给盒子的 map 方法传递一个处理值的函数（纯函数），由这个函数来对值进行处理
+- 最终 map 方法返回一个包含新值得盒子（函子），所以就可以进行链式调用
+
+在 Functor 中我们传入了 null 或 undefined，这样就会导致函数不纯（副作用），这时需要了解一下 MayBe 函子
+
+```js
+// TypeError: Cannot read property 'toUpperCase' of null
+Container.of(null).map(x => x.toUpperCase())
+```
+
+### MayBe 函子
+
+- 我们在编程的过程中可能会遇到很多错误，需要对这些错误做相应的处理
+- MayBe 函子的作用就是可以对外部的空值情况做处理（控制副作用在允许的范围）
+
+```js
+// MayBe 函子
+class MayBe {
+  static of(value) {
+    return new MayBe(value)
+  }
+  constructor(value) {
+    this._value = value
+  }
+  map(fn) {
+    return this.isNothing() ? MayBe.of(null) : MayBe.of(fn(this._value))
+  }
+  isNothing() {
+    return this._value === null || this._value === undefined
+  }
+}
+
+// let r = MayBe.of('Hello World').map(x => x.toUpperCase())
+let r = MayBe.of('Hello World')
+  .map(x => x.toUpperCase())
+  .map(x => null)
+  .map(x => x.split(' '))
+
+console.log(r)
+```
+
+在多次调用后，最后返回 null 值。这里什么时候出现null，我们是不太容易知道的，就需要了解一下 Either 函子
+
+### Either 函子
+
+- Either 两者中的任何一个，类似于 `if...else...` 的处理
+- 异常会让函数变的不纯，Either 函子可以用来做异常处理
+
+```js
+// Either 函子
+class Left {
+  static of(value) {
+    return new Left(value)
+  }
+  constructor(value) {
+    this._value = value
+  }
+  map() {
+    return this
+  }
+}
+
+class Right {
+  static of(value) {
+    return new Right(value)
+  }
+  constructor(value) {
+    this._value = value
+  }
+  map(fn) {
+    return Right.of(fn(this._value))
+  }
+}
+
+function parseJSON(str) {
+  try {
+    return Right.of(JSON.parse(str))
+  } catch (e) {
+    return Left.of({ error: e.message })
+  }
+}
+let r = parseJSON('{ "name": "zs" }').map(x => x.name.toUpperCase())
+console.log(r)
+```
+
+### IO 函子
+
+- IO 函子中的 `_value` 是一个函数，因为函数式一等公民，这里是把函数作为值来处理
+- IO 函子可以把不纯的动作存储到 `_value` 中，延迟执行这个不纯的操作（惰性执行），包装为纯的操作
+- 把不纯的操作交给调用者来处理（类似工作中的甩锅）
+
+```js
+// IO 函子
+const fp = require('lodash/fp')
+
+class IO {
+  static of(value) {
+    // IO 函子最终想要的还是一个结果，只不过它把取值过程包装到函数里
+    return new IO(function () {
+      return value
+    })
+  }
+  constructor(fn) {
+    this._value = fn
+  }
+  map(fn) {
+    // 把当前函子的 value 和传入的 fn 组合成一个新的函数
+    return new IO(fp.flowRight(fn, this._value))
+  }
+}
+
+let r = IO.of(process).map(p => p.execPath)
+console.log(r._value())
+```
+
+### Task 函子
+
+异步任务使用 [folktale](https://folktale.origamitower.com/) 标准的函数式变成库来对 Task 演示
+
+- folktale 和 lodash、ramda 不同的是，他没有提供很多功能函数
+- 只提供了一些函数式的操作，例如：compose、curry 等，一些函子 Task、Eitther、MayBe 等
+
+**安装**
+
+```bash
+npm install folktale
+```
+
+folktale 模块的 `compose` 和 `curry` 使用方式
+
+```js
+const { compose, curry } = require('folktale/core/lambda')
+const { first, toUpper } = require('lodash/fp')
+
+let f = curry(2, (x, y) => {
+  return x + y
+})
+console.log(f(1, 2))
+console.log(f(1)(2))
+
+let fun = compose(toUpper, first)
+console.log(fun(['one', 'two']))
+```
+
+Task 异步执行
+
+```js
+const fs = require('fs')
+const { task } = require('folktale/concurrency/task')
+const { split, find } = require('lodash/fp')
+
+function readFile(filename) {
+  return task(resolver => {
+    fs.readFile(filename, 'utf-8', (err, data) => {
+      if (err) resolver.reject(err)
+      resolver.resolve(data)
+    })
+  })
+}
+
+readFile('package.json')
+  .map(split('\n'))
+  .map(find(x => x.includes('version')))
+  .run()
+  .listen({
+    onRejected: err => {
+      console.log(err)
+    },
+    onResolved: value => {
+      console.log(value) // "version": "1.0.0",
+    },
+  })
+
+const version = require('../package.json').version
+console.log(version) // 1.0.0
+```
+
+### Pointed 函子
+
+- Pointed 函子是实现了 of 静态方法的函子
+- of 方法是为了避免使用 new 来创建对象（避免看起来很面向对象），更深层的含义是 of 方法用来把值放到上下文 Context（把值放到容器中，使用 map来处理值）
+
+```js
+class Container {
+  static of(value) {
+    return new Container(value)
+  }
+}
+Container.of(2).map(x => x + 5)
+```
+
+### Monad 函子
+
+> [图解 Monad](http://www.ruanyifeng.com/blog/2015/07/monad.html)
+
+在使用 IO 函数的时候，如果想要同步读取文件，利用 IO 函子会写出如下带嵌套的代码
+
+```js
+// IO 函子的问题
+const fs = require('fs')
+const fp = require('lodash/fp')
+
+class IO {
+  static of(value) {
+    return new IO(function () {
+      return value
+    })
+  }
+  constructor(fn) {
+    this._value = fn
+  }
+  map(fn) {
+    return new IO(fp.flowRight(fn, this._value))
+  }
+}
+
+let readFile = function (filename) {
+  // 因为读取文件会产生副作用让函数变的不纯，这里直接返回 IO 函子
+  return new IO(function () {
+    return fs.readFileSync(filename, 'utf-8')
+  })
+}
+let print = function (x) {
+  return new IO(function () {
+    return x
+  })
+}
+let cat = fp.flowRight(print, readFile)
+// IO(IO(x))
+let r = cat('package.json')._value()._value()
+console.log(r)
+```
+
+这里如果想拿到文件里的信息，就需要好几层 `._value()` 的调用，这时就可以了解一下 Monad 函子
+
+- Monad 函子是可以变扁的 Pointed 函子，`IO(IO(X))`
+- 一个函子如果具有 join 和 of 两个方法并遵守一些定律就是一个 Monad
+
+```js
+// IO Monad
+const fs = require('fs')
+const fp = require('lodash/fp')
+
+class IO {
+  static of(value) {
+    return new IO(function () {
+      return value
+    })
+  }
+  constructor(fn) {
+    this._value = fn
+  }
+  map(fn) {
+    return new IO(fp.flowRight(fn, this._value))
+  }
+  join() {
+    return this._value()
+  }
+  flatMap(fn) {
+    return this.map(fn).join()
+  }
+}
+
+let readFile = function (filename) {
+  return new IO(function () {
+    return fs.readFileSync(filename, 'utf-8')
+  })
+}
+let print = function (x) {
+  return new IO(function () {
+    return x
+  })
+}
+let r = readFile('package.json').map(fp.toUpper).flatMap(print).join()
+console.log(r)
+```
+
