增加数组和数值ES6语法

--- a/JavaScriptDeep/2.1ECMAScript新特性.md
+++ b/JavaScriptDeep/2.1ECMAScript新特性.md
@@ -229,6 +229,23 @@ console.log(result === source1) // true
 
   使用 `===` 无法判断 `+0 === -0`、`NaN === NaN`
 
+## 数组
+
+- `Array.from`：用于将两类对象转为真正的数组
+- `Array.of`：用于将一组值，转换为数组，基本上可以用来替代 `Array()` 或 `new Array()`
+- `Array.find` ：用于找出第一个符合条件的数组成员
+- `Array.findIndex`：用法与`find`方法非常类似，返回第一个符合条件的数组成员的位置，如果所有成员都不符合条件，则返回 `-1`
+- `Array.fill` ：使用给定值填充数组
+- `Array.entries()`、`Array.keys()`、`Array.values()` ：用于遍历数组
+
+## 数值
+
+- `Number.isNaN`：用来检查一个值是否为 NaN
+- `Number.isFinite`：检测一个数值是否为有限数
+- `Number.isInteger`：判断一个数是否为整数
+- `Math.trunc`：将数字的小数部分抹掉
+- `Math.sign`：判断一个数到底为正数、负数还是零
+
 ## Proxy
 
  监视某个对象的属性读写，可以使用 `Object.defineProperty`，ES6 增加 `Proxy`
@@ -662,3 +679,4 @@ function foo(bar, baz,) {}
 ```
 
 - `async` 和 `await`
+
