增加webpack插件机制与打包原理

--- a/Engineering/2.2Webpack打包.md
+++ b/Engineering/2.2Webpack打包.md
@@ -281,7 +281,7 @@ webpack 会找到其中文件作为打包入口
 
 ### Loader 工作原理
 
-Loader 负责资源文件从输入到输出的转换，Loader 实际上是一种管道的概念
+Loader 负责资源文件从输入到输出的转换，Loader 实际上是一种管道的概念，对于同一个资源可以依次使用多个 Loader
 
 - loader 配置文件中配置加载器（加载器 use 不仅可以用名字也可以用路径）
 - 注意：loader 管道最终需要返回 JavaScript 代码
@@ -337,3 +337,286 @@ module.exports = {
 }
 ```
 
+### Plugin 插件机制
+
+- 增强 webpack 自动化能力
+
+Loader 专注实现资源模块加载，从而实现整体项目的打包，Plugin 为了解决除了资源加载的一些自动化工作，例如：清除 dist 目录、拷贝静态文件至输出目录、压缩输出代码
+
+**自动清除输出目录**
+
+- `clean-webpack-plugin`
+
+```bash
+yarn add clean-webpack-plugins --dev
+```
+
+```js
+const HtmlWebpackPlugin = require('html-webpack-plugin')
+
+module.exports = {
+  plugins: [new CleanWebpackPlugin()]
+}
+```
+
+**自动生成 HTML 插件**
+
+```html
+<script src="dist/bundle.js"></script>
+```
+
+之前都是硬编码的方式单独存在根目录下，这样有两个问题：
+
+- 项目发布时需要同时发布根目录下的 html 和 dist 目录下所有打包结果，上线后还要确保路径正确
+- 输出的文件或路径发生改变，那么 html 中的 script 的路径也要修改
+
+解决方法：用 webpack 自动生成，一起输出到 dist 目录，`index.html` 中的 `bundle.js` 也是动态的，这样就不会出现硬编码问题
+
+```bash
+yarn add html-webpack-plugin --dev
+```
+
+- 注意：把 `output: { publicPath: 'dist' }` 给删除掉
+
+```js
+const HtmlWebpackPlugin = require('html-webpack-plugin')
+
+module.exports = {
+  plugins: [new HtmlWebpackPlugin()]
+}
+```
+
+接下来有这几个问题：
+
+- 默认生成 HTML 标题需要修改
+
+  ```html
+  <h1><%= htmlWebpackPlugin.options.title %></h1>
+  ```
+
+- 自定义页面元数据标签和基础 DOM 结构
+
+  如果要对 HTML 进行大量自定义，更好的方法是根据模板生成页面
+
+```js
+const HtmlWebpackPlugin = require('html-webpack-plugin')
+
+module.exports = {
+  plugins: [
+    // 用于生成 index.html
+    new HtmlWebpackPlugin({
+      title: 'Webpack Plugin Sample',
+      meta: {
+        viewport: 'width=device-width'
+      },
+      template: './src/index.html'
+    })
+  ]
+}
+```
+
+输出多个 HTML
+
+- 每个 `html-webpack-plugin` 对象就是负责生成一个页面文件
+
+```js
+const HtmlWebpackPlugin = require('html-webpack-plugin')
+
+module.exports = {
+  plugins: [
+    // 用于生成 index.html
+    new HtmlWebpackPlugin({
+      title: 'Webpack Plugin Sample',
+      meta: {
+        viewport: 'width=device-width'
+      },
+      template: './src/index.html'
+    }),
+    // 用于生成 about.html
+    new HtmlWebpackPlugin({
+      filename: 'about.html'
+    })
+  ]
+}
+```
+
+**自动复制文件**
+
+项目中还有一些不参与构建的静态文件，例如网站 `favicon`，可以把其放到 `public` 目录中，一并打包
+
+```bash
+yarn add copy-webpack-plugin --dev
+```
+
+`CopyWebpackPlugin` 要求我们传入一个数组用于指定文件的拷贝路径，可以是通配符也可以是文件路径
+
+```js
+const CopyWebpackPlugin = require('copy-webpack-plugin')
+
+module.exports = {
+  plugins: [
+    new CopyWebpackPlugin([
+      // 'public/**'
+      'public'
+    ])
+  ]
+}
+```
+
+### 开发一个插件
+
+> [Compiler Hooks](https://webpack.js.org/api/compiler-hooks/)
+>
+> [webpack4 Compiler Hooks ](https://v4.webpack.js.org/api/compilation-hooks/)
+>
+> [compiler 钩子](https://www.webpackjs.com/api/compiler-hooks/)
+
+相比于 Loader，Plugin 拥有更宽的能力范围
+
+- Plugin 通过钩子机制实现
+
+  钩子机制，类似于 web 的事件，为了便于插件扩展，webpack 在每个环节都设置了钩子
+
+![webpack钩子机制](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/webpack%E9%92%A9%E5%AD%90%E6%9C%BA%E5%88%B6.png)
+
+webpack 要求插件必须是一个函数或者是一个包含 `apply` 方法的对象，一般会把插件定义成一个类，在类上定义一个 `apply` 方法
+
+- 里面有 `emit` 的钩子，在生成资源到 `output` 目录之前执行
+
+通过在生命周期的钩子中挂载函数实现扩展
+
+```js
+class MyPlugin {
+  // 在 webpack 启动时自动调用
+  apply(compiler) {
+    /**
+     * @param1 插件名称
+     * @param2 挂载的函数
+     */
+    compiler.hooks.emit.tap('MyPlugin', compilation => {
+      // compilation => 可以理解为此次打包的上下文
+      for (const name in compilation.assets) {
+        if (name.endsWith('.js')) {
+          const contents = compilation.assets[name].source()
+          const withoutComments = contents.replace(/\/\*\*+\*\//g, '')
+          compilation.assets[name] = {
+            source: () => withoutComments,
+            size: () => withoutComments.length
+          }
+        }
+      }
+    })
+  }
+}
+
+module.exports = {
+  plugins: [new MyPlugin()]
+}
+```
+
+## webpack 开发环境
+
+设想一下开发环境
+
+1. 以 HTTP Server 运行
+2. 自动编译 + 自动刷新
+3. 提供 Source Map 支持
+
+### 自动编译刷新
+
+**自动编译**
+
+```bash
+yarn webpack --watch
+```
+
+**自动刷新浏览器**
+
+- 同时使用两个工具效率低下，webpack 编译后写入磁盘，服务器从磁盘读取
+
+```bash
+browser-sync dist --files "**/*"
+```
+
+**Dev Server**
+
+- 集成 自动编译 和 自动刷新浏览器 等功能
+
+  webpack 为了提高效率，并没有输出 dist 目录，而是将结果暂存到内存中，而 server 是从内存读取文件，然后发送给浏览器，提高效率
+
+```bash
+yarn add webpack-dev-server --dev
+```
+
+- `CopyWebpackPlugin` 一般只有上线才会使用这个插件，开发如果拷贝得多，效率就低了
+
+  需要在
+
+- 注释掉 `CopyWebpackPlugin` 就需要在 `devServer` 配置 `contentBase`
+
+```js
+module.exports = {
+  devServer: {
+    contentBase: './public',
+  },
+  plugins: [
+    // new CopyWebpackPlugin(['public'])
+  ]
+}
+```
+
+### Dev Server 代理
+
+![webpackDevServerApi](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/webpackDevServerApi.png)
+
+- 使用 CORS 的前提是 API 必须支持，并不是任何情况下 API 都应该支持
+
+- 希望访问路径 `https://api.github.com/users`
+
+  配置 `target` 后转换：`http://localhost:8080/api/users -> https://api.github.com/api/users`
+
+  因为根路径没有 `/api`，所以需要使用 `pathRewrite` 重写：`http://localhost:8080/api/users -> https://api.github.com/users`
+
+- `changeOrigin: true` 会以实际代理请求过程中的主机名进行请求，不会使用 `localhost: 8080`
+
+```js
+module.exports = {
+  devServer: {
+    contentBase: './public',
+    proxy: {
+      '/api': {
+        target: 'https://api.github.com',
+        pathRewrite: {
+          '^/api': ''
+        },
+        // 不能使用 localhost:8080 作为请求 GitHub 的主机名
+        changeOrigin: true
+      }
+    }
+  },
+}
+```
+
+```js
+fetch('/api/users') // http://localhost:8080/api/users
+  .then(res => res.json())
+  .then(data => {
+    data.forEach(item => {
+      const li = document.createElement('li')
+      li.textContent = item.login
+      ul.append(li)
+    })
+  })
+```
+
+### Source Map
+
+- 调式和报错都是基于运行代码，但是运行代码与源代码又不同
+
+```js
+module.exports = {
+  devtool: 'source-map',
+}
+```
+
+![SourceMap对应表](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/SourceMap%E5%AF%B9%E5%BA%94%E8%A1%A8.png)
