增加其他打包工具

--- a/Engineering/1.4模块一作业.md
+++ b/Engineering/1.4模块一作业.md
@@ -2,9 +2,21 @@
 
 > 谈谈你对工程化的初步认识，结合你之前遇到过的问题说出三个以上工程化能够解决问题或者带来的价值
 
+工程化是根据业务特点，将前端开发流程规范化、标准化，它包括了开发流程、技术选型、代码规范、构建发布等，用于提升前端工程师的开发效率和代码质量
+
+1. 制定各项规范：代码规范、开发流程规范、前后端接口规范等
+2. 使用版本控制工具 git，commit 描述规范
+3. 使用合适前端技术和框架，提高生产效率，降低维护难度，采用模块化、组件和、数据分离等
+4. 代码可测试性，单元测试，端到端测试等
+5. 开发部署自动化
+
 ## 二、脚手架意义
 
 > 你认为脚手架除了为我们创建项目结构，还有什么更深的意义
+
+- 减少重复性工作，不需要复制其他项目再删除无关代码，或者从零创建一个项目和文件
+- 可以根据交互动态生成项目结构和配置文件
+- 多人协作更方便，不需要把文件传来传去
 
 ## 三、概述脚手架实现的过程
 
@@ -12,5 +24,102 @@
 >
 > 链接：[https://pan.baidu.com/s/1cssveoOWzTh1kEYReyTQUg](https://pan.baidu.com/s/1cssveoOWzTh1kEYReyTQUg) 提取码：8yl1 
 
-## 四、尝试使用 Gulp 完成项目的自动化构建
+1. 创建目录，初始化 `yarn init` 创建出 `package.json`
 
+2. 在 `package.json` 输入 `bin` 入口
+
+   ```js
+   {
+     "bin": "lib.js",
+   }
+   ```
+
+3. 在根目录创建 `lib.js` 文件，添加 `bin` 入口标识
+
+   ```bash
+   #!/usr/bin/env node
+   ```
+
+4. 引入 `inquirer` 模块，创建用户与命令行交互的工具，编写所需问题及字段
+
+5. 创建模板目录 `templates` 将项目文件导入到目录中
+
+6. 引入 `ejs` 模块，结合所需功能问题变量，改写 `templates` 下项目文件，达到所需功能
+
+7. 在 `inquirer` 回调函数中，结合 `nodejs` 读写功能和 `ejs` 模块将问题变量重写到项目中
+
+8. 发布到 npm 上
+
+```js
+//cli.js 参考
+#!/usr/bin/env node
+
+const fs = require('fs')
+const path = require('path')
+const inquirer = require('inquirer')
+const ejs = require('ejs')
+
+inquirer.prompt([
+  {
+    type: 'input',
+    name: 'name',
+    message: 'Project name?'
+  },
+  {
+    type: 'list',
+    name: 'theme',
+    message: 'Select the theme color',
+    choices: ['Dark', 'Light'],
+    filter: function (val) {
+      return val.toLowerCase();
+    },
+  },
+  {
+    type: 'checkbox',
+    message: 'Select what to include',
+    name: 'content',
+    choices: [
+      {
+        name: 'Header',
+      },
+      {
+        name: 'Body',
+      },
+      {
+        name: 'Footer',
+      },
+    ],
+    validate: function (answer) {
+      if (answer.length < 1) {
+        return 'You must choose at least one content.';
+      }
+
+      return true;
+    },
+  },
+  
+])
+.then(anwsers => {
+  const tmplDir = path.join(__dirname, 'templates')
+  const destDir = process.cwd()
+
+  fs.readdir(tmplDir, (err, files) => {
+    if (err) throw err
+    files.forEach(file => {
+      ejs.renderFile(path.join(tmplDir, file), anwsers, (err, result) => {
+        if (err) throw err
+
+        fs.writeFileSync(path.join(destDir, file), result)
+      })
+    })
+  })
+})
+```
+
+## 四、使用 Gulp 完成项目的自动化构建
+
+> [https://gulpjs.com/plugins/](https://gulpjs.com/plugins/)
+
+## 五、使用 Grunt 完成项目自动化构建
+
+> [https://www.gruntjs.net/plugins](https://www.gruntjs.net/plugins)
