--- a/Engineering/2.2Webpack打包.md
+++ b/Engineering/2.2Webpack打包.md
@@ -611,7 +611,18 @@ fetch('/api/users') // http://localhost:8080/api/users
 
 ### Source Map
 
-- 调式和报错都是基于运行代码，但是运行代码与源代码又不同
+- eval：将模块代码放到 `eval` 函数执行，通过 `sourceURL` 标注模块文件的路径，并没有生成 `Source-Map`，无法定位哪一个文件除了错误
+- eval-souce-map：使用 `eval` 函数执行代码，不仅可以定位错误出现的文件还可以定位行和列的信息
+- cheap-eval-source-map：相对于 `eval-souce-map` 它只能定位行的信息，不能定位列的信息
+- cheap-module-eval-source-map：`cheap-eval-source-map` 展示的是 ES6 转换后的结果，`cheap-module-eval-source-map` 定位的源代码跟我们编写的代码是一样的
+
+总结：
+
+- eval：是否使用 `eval` 执行模块代码
+- cheap-Source Map：是否包含行信息
+- module：是否能够得到 Loader 处理之前的源代码
+
+调式和报错都是基于运行代码，但是运行代码与源代码又不同
 
 ```js
 module.exports = {
@@ -619,4 +630,544 @@ module.exports = {
 }
 ```
 
+webpack 支持 12 种不同的 SourceMap 方式，每种方式的效率和效果各不相同
+
 ![SourceMap对应表](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/SourceMap%E5%AF%B9%E5%BA%94%E8%A1%A8.png)
+
+可以通过 sourceURL 去改变 eval 执行所属环境的名称
+
+```js
+// 默认会运行在临时虚拟机中
+eval('console.log(1)') // VM62:1
+// 使用 sourceURL 声明代码所属路径
+eval('console.log(1) //# sourceURL=./foo/bar.js') // ./foo/bar.js:1 
+```
+
+浏览器通过 eval 执行就知道这段代码所对应的源代码是哪个文件，实现定位错误所出现的文件
+
+- 实际上不会生成 SourceMap 文件，构建速度就会比较快，但是只能定位源代码名称不能定位行列信息
+
+![sourcemapEval](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/sourcemapEval.png)
+
+```js
+const HtmlWebpackPlugin = require('html-webpack-plugin')
+
+const allModes = [
+	'eval',
+	'cheap-eval-source-map',
+	'cheap-module-eval-source-map',
+	'eval-source-map',
+	'cheap-source-map',
+	'cheap-module-source-map',
+	'inline-cheap-source-map',
+	'inline-cheap-module-source-map',
+	'source-map',
+	'inline-source-map',
+	'hidden-source-map',
+	'nosources-source-map'
+]
+
+module.exports = allModes.map(item => {
+	return {
+		devtool: item,
+		mode: 'none',
+		entry: './src/main.js',
+		output: {
+			filename: `js/${item}.js`
+		},
+		module: {
+			rules: [
+				{
+					test: /\.js$/,
+					use: {
+						loader: 'babel-loader',
+						options: {
+							presets: ['@babel/preset-env']
+						}
+					}
+				}
+			]
+		},
+		plugins: [
+			new HtmlWebpackPlugin({
+				filename: `${item}.html`
+			})
+		]
+	}
+})
+```
+
+**选择合适 Source Map**
+
+- 开发环境使用：cheap-module-eval-source-map
+
+  代码每行不会超过 80 个字符
+
+  使用框架比较多，代码经过 Loader 转换过后的差异较大
+
+  首次打包速度慢无所谓，重新打包相对较快
+
+- 生产模式：none 或 nosources-source-map
+
+  Source Map 会暴露源代码
+
+  调式是开发阶段的事情
+
+### 自动刷新
+
+**自动刷新导致页面状态丢失**
+
+1. 代码中写死编辑器的内容
+2. 额外代码实现刷新前保存，刷新后读取
+
+最好的解决方法：页面不刷新的前提下，模块也可以及时更新
+
+**HMR**（`Hot Module Replacement` 模块热替换）
+
+- 热拔插：在一个正在运行的机器上随时插拔设备，比如：USB 接口
+- 热模块替换：在应用运行过程中实时替换某个模块，应用运行状态不受影响，只将修改的模块实时替换至应用中
+
+```bash
+# 不配置webpack.config.js
+yarn webpack-dev-server --hot
+# 配置webpack.config.js
+yarn webpack-dev-server
+```
+
+webpack 中的 HMR 并不可以开箱即用，需要手动处理模块热替换逻辑
+
+- 为什么样式文件的热更新开箱即用？
+
+  因为 `style-loader` 自动处理热更新
+
+![css热更新替换](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/css%E7%83%AD%E6%9B%B4%E6%96%B0%E6%9B%BF%E6%8D%A2.png)
+
+- 为什么脚本就需要手动处理？
+
+  样式更新只需要把 CSS 及时替换到页面中即可
+
+  在 JS 中有可能导出的函数有可能是对象
+
+- 项目没有手动处理，JS 照样可以热替换
+
+  使用框架，每种文件都是由规律
+
+```js
+const webpack = require('webpack')
+
+module.exports = {
+  devServer: {
+    hot: true
+  },
+  plugins: [new webpack.HotModuleReplacementPlugin()]
+}
+```
+
+JS 模块与图片模块热替换
+
+```js
+import createEditor from './editor'
+import background from './better.png'
+import './global.css'
+
+const editor = createEditor()
+document.body.appendChild(editor)
+const img = new Image()
+img.src = background
+document.body.appendChild(img)
+
+
+if (module.hot) {
+  let lastEditor = editor
+  module.hot.accept('./editor', () => {
+    const value = lastEditor.innerHTML
+    document.body.removeChild(lastEditor)
+    const newEditor = createEditor()
+    newEditor.innerHTML = value
+    document.body.appendChild(newEditor)
+    lastEditor = newEditor
+  })
+
+  module.hot.accept('./better.png', () => {
+    img.src = background
+  })
+}
+```
+
+**注意事项：**
+
+1. 处理 HMR 的代码报错会导致自动刷新
+
+```js
+module.exports = {
+  devServer: {
+    hotOnly: true // 只使用 HMR，不会 fallback 到 live reloading
+  },
+}
+```
+
+2. 没启用 HMR 的情况下，HMR API 报错
+
+```js
+if (module.hot) {
+  // donw
+}
+```
+
+## webpack 生产环境
+
+生产环境注重运行效率，以更少量更
+
+### 不同环境下的配置
+
+1. 配置文件根据环境不同导出不同配置
+
+```js
+module.exports = (env, argv) => {
+  const config = {
+    mode: 'development',
+    devtool: 'cheap-eval-module-source-map',
+    // ...
+  }
+
+  if (env === 'production') {
+    config.mode = 'production'
+    config.devtool = false
+    config.plugins = [
+      ...config.plugins,
+      new CleanWebpackPlugin(),
+      new CopyWebpackPlugin(['public'])
+    ]
+  }
+
+  return config
+}
+```
+
+2. 一个环境对应一个配置文件
+
+```js
+const merge = require('webpack-merge')
+const { CleanWebpackPlugin } = require('clean-webpack-plugin')
+const CopyWebpackPlugin = require('copy-webpack-plugin')
+const common = require('./webpack.common')
+
+module.exports = merge(common, {
+  mode: 'production',
+  plugins: [
+    new CleanWebpackPlugin(),
+    new CopyWebpackPlugin(['public'])
+  ]
+})
+```
+
+### DefinePlugin
+
+- 为代码注入全局成员
+
+在 Production 模式下，这个插件会往代码中注入 `process.env.NODE_ENV`
+
+```js
+const webpack = require('webpack')
+
+module.exports = {
+  plugins: [
+    new webpack.DefinePlugin({
+      // 值要求的是一个代码片段
+      API_BASE_URL: JSON.stringify('https://api.example.com')
+    })
+  ]
+}
+```
+
+### Tree-shaking
+
+- 摇掉代码中未引用部分（dead-code）
+
+Tree Shaking 不是 webpack 某个配置选项，是一组功能搭配使用后的优化效果，在生产模式自动开启
+
+- `usedExports`：负责标记（枯树叶）
+
+- `minimize`：负责（摇掉）它们
+
+- `concatenateModules`：尽可能将所有模块合并输出到一个函数中
+
+  即提升了运行效率，又减少了代码的体积，又称为 `Scope Hoisting` 作用域提升（webapck 3 开始支持）
+
+```js
+module.exports = {
+  mode: 'none',
+  optimization: {
+    // 模块只导出被使用的成员
+    usedExports: true,
+    // 尽可能合并每一个模块到一个函数中
+    concatenateModules: true,
+    // 压缩输出结果
+    minimize: true
+  }
+}
+```
+
+Tree Shaking 前提是 ES Modules，webpack 打包的代码必须是 ESM
+
+- 为了转换代码中的 ECMAScript 新特性，很多时候都会使用 `babel-loader` 处理 JS
+- 最新版本 `babel-loader` 自动关闭了 ES Modules 转换
+
+`babel-loader\lib\injectCaller.js` 支持 ESM
+
+![babel-loader支持esm](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/babel-loader%E6%94%AF%E6%8C%81esm.png)
+
+`@babel\preset-env\lib\index.js` 自动禁用了 ESM 的转换，webpack 得到的还是 ESM 代码，`tree-shaking` 就可以正常工作了
+
+![preset-env自动禁用module转换](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/preset-env%E8%87%AA%E5%8A%A8%E7%A6%81%E7%94%A8module%E8%BD%AC%E6%8D%A2.png)
+
+如果 Babel 加载模块时已经转换了 ESM，则会导致 Tree Shaking 失效
+
+```js
+module.exports = {
+  mode: 'none',
+  module: {
+    rules: [
+      {
+        test: /\.js$/,
+        use: {
+          loader: 'babel-loader',
+          options: {
+            presets: [
+              // ['@babel/preset-env', { modules: 'commonjs' }]
+              // ['@babel/preset-env', { modules: false }]
+              // 也可以使用默认配置，也就是 auto，这样 babel-loader 会自动关闭 ESM 转换
+              ['@babel/preset-env', { modules: 'auto' }]
+            ]
+          }
+        }
+      }
+    ]
+  }
+}
+```
+
+**sideEffects**
+
+- 副作用：模块执行时除了导出成员之外所作的事情
+
+  `sideEffects` 一般用于 npm 包标记是否有副作用
+
+- 在 `components/index.js` 中集中导出组件便于外部导入
+
+  在 `index.js` 中只导入 `Button` 成员，但是 `components/index.js` 所有组件都会被加载执行
+
+  开启 `sideEffects` 后，webpack 在打包时就会先检查 `package.json` 中有没有 `sideEffects` 标识，以此判断这个模块是否有副作用，如果这个模块没有副作用，没有用到的模块就不会打包
+
+- 使用 `sideEffects` 的前提是确保你的代码真的没有副作用
+
+```js
+// webpack.config.js
+module.exports = {
+  optimization: {
+    sideEffects: true,
+  }
+}
+
+// package.json
+{
+  "sideEffects": [
+    "./src/extend.js",
+    "*.css"
+  ]
+}
+```
+
+### Code Splitting
+
+webpack 打包问题：所有代码最终都被打包到一起，就会导致 `bundle` 体积过大，并不是每个模块在启动时都是必要的
+
+- 合理方案：打包结果按照一定规则分离到多个 `bundle` 中，根据应用运行需要按需加载模块
+
+HTTP1.1 缺陷：
+
+- 同域并行请求限制
+- 每次请求都会有一定的延迟
+- 请求的 Header 浪费带宽流量
+
+webpack 实现分包：
+
+- 多入口打包
+
+  多页应用程序：一个页面对应一个打包入口，公共部分单独提取
+
+- 动态导入
+
+  不同入口中肯定会有公共模块
+
+**多入口打包**
+
+- 把 `entry` 定义成一个对象，定义成数组就是把多个文件打包到一起，对于整个应用来说还是一个入口
+
+  需要把 `output` 改为占用符方式动态输出文件名
+
+```js
+const { CleanWebpackPlugin } = require('clean-webpack-plugin')
+const HtmlWebpackPlugin = require('html-webpack-plugin')
+
+module.exports = {
+  mode: 'none',
+  entry: {
+    index: './src/index.js',
+    album: './src/album.js'
+  },
+  output: {
+    filename: '[name].bundle.js'
+  },
+  module: {
+    rules: [
+      {
+        test: /\.css$/,
+        use: [
+          'style-loader',
+          'css-loader'
+        ]
+      }
+    ]
+  },
+  plugins: [
+    new CleanWebpackPlugin(),
+    new HtmlWebpackPlugin({
+      title: 'Multi Entry',
+      template: './src/index.html',
+      filename: 'index.html',
+      chunks: ['index']
+    }),
+    new HtmlWebpackPlugin({
+      title: 'Multi Entry',
+      template: './src/album.html',
+      filename: 'album.html',
+      chunks: ['album']
+    })
+  ]
+}
+```
+
+**拆分成模块**
+
+```js
+module.exports = {
+  optimization: {
+    splitChunks: {
+      // 自动提取所有公共模块到单独 bundle
+      chunks: 'all'
+    }
+  },
+}
+```
+
+**动态导入**
+
+- 需要用到某个模块时，再加载这个模块
+- 动态导入的模块会被自动分包
+
+默认通过动态导入产生的 `bundle` 文件，名称就只是一个序号，如果希望给它命名，可以使用 webpack 魔法注释（Magic Comments）
+
+```js
+// import posts from './posts/posts'
+// import album from './album/album'
+
+const render = () => {
+  const hash = window.location.hash || '#posts'
+  const mainElement = document.querySelector('.main')
+  mainElement.innerHTML = ''
+
+  if (hash === '#posts') {
+    import(/* webpackChunkName: 'components' */'./posts/posts').then(({ default: posts }) => {
+      mainElement.appendChild(posts())
+    })
+  } else if (hash === '#album') {
+    // mainElement.appendChild(album())
+    import(/* webpackChunkName: 'components' */'./album/album').then(({ default: album }) => {
+      mainElement.appendChild(album())
+    })
+  }
+}
+render()
+window.addEventListener('hashchange', render)
+```
+
+### 压缩 CSS
+
+- `MiniCssExtractPlugin` 提取 CSS 到单个文件
+- `OptimizeCssAssetsWebpackPlugin` 压缩输出的 CSS 文件
+- `TerserWebpackPlugin` 压缩输出的 JS 文件
+
+```js
+const { CleanWebpackPlugin } = require('clean-webpack-plugin')
+const HtmlWebpackPlugin = require('html-webpack-plugin')
+const MiniCssExtractPlugin = require('mini-css-extract-plugin')
+const OptimizeCssAssetsWebpackPlugin = require('optimize-css-assets-webpack-plugin')
+const TerserWebpackPlugin = require('terser-webpack-plugin')
+
+module.exports = {
+  mode: 'none',
+  entry: {
+    main: './src/index.js'
+  },
+  output: {
+    filename: '[name].bundle.js'
+  },
+  optimization: {
+    minimizer: [
+      new TerserWebpackPlugin(),
+      new OptimizeCssAssetsWebpackPlugin()
+    ]
+  },
+  module: {
+    rules: [
+      {
+        test: /\.css$/,
+        use: [
+          // 'style-loader', // 将样式通过 style 标签注入
+          MiniCssExtractPlugin.loader,
+          'css-loader'
+        ]
+      }
+    ]
+  },
+  plugins: [
+    new CleanWebpackPlugin(),
+    new HtmlWebpackPlugin({
+      title: 'Dynamic import',
+      template: './src/index.html',
+      filename: 'index.html'
+    }),
+    new MiniCssExtractPlugin()
+  ]
+}
+```
+
+### 输出文件名 Hash
+
+一般部署前端资源文件时都会开启服务器静态资源缓存
+
+- 如果缓存策略失效时间过短的话，效果不明显
+- 如果缓存策略失效时间过长的话，文件修改了又没办法及时更新到客户端
+
+为了解决这个问题，生产模式下给输出文件名添加 hash 值，这样全新的文件名就是全新的文件，这样就不会有缓存问题了
+
+**文件资源缓存**
+
+1. `hash`：每次webpack构建时会生成一个唯一的 hash 值。不管文件是否有变化它都会变化
+2. `chunkhash`：如果打包来源于同一个 chunk，那么 hash 值就一样。如果在 js 中引入 css，js 和 css 就会绑定在一起
+3. `contenthash`：根据文件的内容生成 hash 值。不同文件 hash 值一定不一样
+
+```js
+module.exports = {
+  output: {
+    filename: '[name]-[contenthash:8].bundle.js'
+  },
+  plugins: [
+    new MiniCssExtractPlugin({
+      filename: '[name]-[contenthash:8].bundle.css'
+    })
+  ]
+}
+```
+
