模块二作业

--- a/JavaScriptDeep/2.4模块二作业.md
+++ b/JavaScriptDeep/2.4模块二作业.md
@@ -1,16 +1,16 @@
 ## 一、请说出最终的执行结果
 
-
-
 ```js
-var a = [];
+var a = []
 for (var i = 0; i < 10; i++) {
-    a[i] = function() {
-        console.log(i)
-    }
+  a[i] = function () {
+    console.log(i)
+  }
 }
 a[6]()
 ```
+
+结果是 10
 
 ## 二、请说出最终的执行结果
 
@@ -22,13 +22,32 @@ if (true) {
 }
 ```
 
+报错，let 会形成块级作用域，let 不会导致变量提升，因此 `console.log(tmp)` 无法找到生命，出现暂存性死区
+
 ## 三、ES6 语法，找数组最小值
 
 ```js
 var arr = [12, 34, 32, 89, 4]
 ```
 
+找数组最小值
+
+```js
+arr.sort((a, b) => a - b)[0]
+arr.reduce((acc, cur) => (acc > cur ? cur : acc))
+Math.min(...arr)
+```
+
 ## 四、var、let、const 区别
+
+|            | var                             | let                | const                                      |
+| ---------- | ------------------------------- | ------------------ | ------------------------------------------ |
+| 提升       | 声明提升，使用 undefined 初始化 | 不存在变量提升     | 不存在变量提升                             |
+| 作用域     | 全局                            | 块级               | 块级                                       |
+| 初始化     | 可以仅声明不初始化              | 可以仅声明不初始化 | 必须在声明时初始化                         |
+| 重复定义   | 可以                            | 不可以             | 不可以                                     |
+| 多次赋值   | 可以                            | 可以               | 基本数据类型不可以，引用数据类型可以改变值 |
+| 声明前访问 | 可以                            | 不可以             | 不可以                                     |
 
 ## 五、请说出最终的执行结果
 
@@ -44,6 +63,8 @@ var obj = {
 }
 obj.fn()
 ```
+
+结果是 20，`setTimeout` 是箭头函数，里面的 this 指向没有改变和 fn 函数里的 this 是一致的都指向 obj
 
 ## 六、简述 Symbol 类型的用途
 
